# kartensammlung-weather-builds

./: .gitignore  INCA.md  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: build-arome.yml  build-inca.yml
config/: inca-nowcast.json
examples/: maplibre.js
scripts/: prune-releases.sh  upload-easyname.sh  upload-inca-easyname.sh
tests/: test_encoding.py  test_geosphere.py  test_inca.py  test_precipitation.py
weather_build/: __init__.py  build.py  cli.py  config.py  geosphere.py  inca.py  netcdf.py  tiles.py
